<resources>
    <string name="app_name">PlanS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">El email no es valido</string>
    <string name="error_invalid_password">La contraseña es invalida</string>
    <string name="error_incorrect_password">Contraseña y/o email invalidos</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="action_register">Registrate</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Registrar usuario-->
    <string name="register_password">Contraseña</string>
    <string name="register_confirm_password">Confirmar Contraseña</string>
    <string name="register_username">Nombre Usuario</string>
    <string name="register_name">Nombre</string>
    <string name="register_secondname">Apellido</string>
    <string name="register_tipoid">Tipo Identificación</string>
    <string name="register_numeroid">Numero Identificacion</string>
    <string name="register_preferencias">Preferencias</string>
    <string name="register_Label">Registrar nuevo usuario</string>
    <string name="register_button_submit">Registrar</string>
    <string name="error_confirm_password">Las contraseñas no coinciden</string>
    <string name="edituser_button_submit">Finalizar Edición</string>
    <string name="create_preferencias">Tus Preferencias</string>
    <string name="create_tipoid">Tipo Identificación</string>
    <string name="Subir_imagen_usuario">Subir Foto de perfil</string>

    <!--Main Planes Recomendados-->
    <string name="Main_Label">Planes Recomendados</string>
    <string name="Search_Label">Planes Encontrados</string>
    <string name="YourPlans_Label">Planes Creados Por Ti</string>
    <string name="Subscribed_Label">Planes Suscritos</string>

    <!--Plan Description-->
    <string name="plan_descripcion">Descripción</string>
    <string name="plan_suscribirse">Suscribete</string>
    <string name="plan_unsubscribe">Desuscribete</string>
    <string name="plan_ubicacion">Ubicación</string>
    <string name="plan_fecha_ini">Fecha Inicio</string>
    <string name="plan_fecha_fin">Fecha Final</string>
    <string name="plan_costo">Costo Promedio</string>
    <string name="plan_creador">Creador del Plan</string>
    <string name="plan_asistentes">Asistentes</string>
    <string name="title_activity_edit_user">EditUserActivity</string>
    <string name="search_title">Buscar Plan</string>
    <string name="search_hint">Buscar Plan</string>
    <string name="button_plan_edit">Editar Plan</string>

    <!--Create Plan-->
    <string name="createplan_nombre">Nombre</string>
    <string name="createplan_descripcion">Descripción</string>
    <string name="createplan_ubicacion">Ubicacion</string>
    <string name="createplan_fechaini">Fecha Inicio</string>
    <string name="createplan_fechafin">Fecha Finalización</string>
    <string name="createplan_costo">Costo Promedio</string>
    <string name="createplan_preferencia">Preferencia Plan</string>
    <string name="createplan_button">Crear Plan</string>
    <string name="ubicacion">Ubicación</string>
    <string name="createplan_preferences">Preferencia de tu plan</string>
    <string name="editplan_button">Editar plan</string>
    <string name="Subir_imagen_plan">Subir foto del plan</string>


    <!--Date time pickers-->
    <string name="switch_datetime_picker_name">Switch DateTime Picker</string>
    <string name="open_datetime_dialog">Open DateTime Dialog</string>
    <string name="open_datetime_dialog_with_neutral_button">Open DateTime Dialog with Neutral Button</string>
    <string name="clean">Clean</string>


</resources>
