<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.georgios.plans.UnsubscribePlanActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/planDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plan_descripcion"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
            <TextView
                android:id="@+id/planDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="text Description"
                />

            <TextView
                android:id="@+id/planUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plan_ubicacion"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
            <TextView
                android:id="@+id/planUbicacionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="text Description"
                />

            <TextView
                android:id="@+id/planFechaInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plan_fecha_ini"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
            <TextView
                android:id="@+id/planFechaInicioText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="text Description"
                />

            <TextView
                android:id="@+id/planFechaFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plan_fecha_fin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
            <TextView
                android:id="@+id/planFechaFinalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="text Description"
                />

            <TextView
                android:id="@+id/planCosto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plan_costo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
            <TextView
                android:id="@+id/planCostoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="text Description"
                />

            <TextView
                android:id="@+id/planCreador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plan_creador"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                />
            <TextView
                android:id="@+id/planCreadorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="text Description"
                />

            <Button
                android:id="@+id/subscribe_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/plan_unsubscribe"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_divider"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/planAsistentes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/plan_asistentes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/asistentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
